welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:53: error: not found: value Faire3Motifs
  Faire3Motifs();
  ^